service-manifest/platform/overlays/dev/frontend/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
  namespace: dev
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: frontend
          image: gcr.io/ecucalibrator/frontend:581f55d7a574de439908a6e2ef62b128b4630709
