service-manifest/platform/overlays/dev/frontend/service.yml
kind: Service
apiVersion: v1
metadata:
  name: frontend
  namespace: dev
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 31000
  selector:
    app: frontend
