service-manifest/platform/overlays/dev/frontend/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
  namespace: dev
